# haru

./: Cargo.toml
src/: main.rs  model.rs  utils.rs
src/commands/: help.rs  mod.rs  music.rs  playlist.rs
