[package]
name = "shizu"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.17"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
songbird = { version = "0.2.0", features = ["builtin-queue"] }
serenity = { version = "0.10.9", features = ["collector"] }
mongodb = "2.0.1"
serde = { version = "1.0.130", features = ["derive"] }
